Added sound effects

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 
     <div id="bottomHeading">Bottom Heading</div>
     <button id="restartButton" onclick="location.reload()">Reset</button>
+   
+    <audio id="beeps" src="sounds/beeps.wav"></audio>
+    <audio id="win" src="sounds/win.wav"></audio>
+    <audio id="lose" src="sounds/lose.wav"></audio>
+    <audio id="tie" src="sounds/tie.wav"></audio>
+    <audio loop id="gameOver" src="sounds/gameover.wav"></audio>
 
   <script src="script.js"></script>
 
