--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>My Rock, Paper, Scissors</title>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -54,6 +55,12 @@
     <div id="bottomHeading">Bottom Heading</div>
     <button id="restartButton" onclick="location.reload()">Reset</button>
    
+
+    <div id="credits">Built by&nbsp;<a href="https://github.com/jonro2955">Jonathan Ro</a>
+      <br>As part of&nbsp;<a href="https://www.theodinproject.com/">The Odin Project</a>&nbsp;curriculum
+    </div>
+
+
     <audio id="beeps" src="sounds/beeps.wav"></audio>
     <audio id="win" src="sounds/win.wav"></audio>
     <audio id="lose" src="sounds/lose.wav"></audio>
