--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    
 
     <div id="credits">Built by&nbsp;<a href="https://github.com/jonro2955">Jonathan Ro</a>
-      <br>For&nbsp;<a href="https://www.theodinproject.com/">The Odin Project</a>&nbsp;curriculum
+      <br>For&nbsp;<a href="https://www.theodinproject.com/">The Odin Project</a>&nbsp;Curriculum
     </div>
 
 
